<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mega Stream</string>
    <string name="mega">Mega</string>
    <string name="stream">Stream</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_title">Marvel Stream</string>
    <string name="test_username">Serpider</string>
    <string name="test_email">saeedghafoori1@gmai.com</string>
    <string name="test_desc">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
    <string name="test_desc_short">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طر با نرم افزارها شناخت بیشتری رک</string>
    <string name="account_en">Account</string>
    <string name="login">ورود به حساب</string>
    <string name="login_btn">تایید و ورود</string>
    <string name="signup_btn">ثبت نام</string>
    <string name="username">نام کاربری</string>
    <string name="nickname">نام مستعار</string>
    <string name="password">رمزعبور</string>
    <string name="password_config">تکرار رمزعبور</string>
    <string name="or_en">Or</string>
    <string name="google_account">حساب گوگل</string>
    <string name="twitter_account">حساب توییتر</string>
    <string name="login_to_account">ورود به حساب</string>
    <string name="login_to_sign">ثبت نام</string>
    <string name="sign_to_login">ورود به حساب</string>
    <string name="signup">ثبت نام</string>
    <string name="signup_desc">با عضویت در مگا استریم از تمامی امکانات بهره مند شوید و لحظات خوشی را سپری کنید</string>
    <string name="email">ایمیل</string>
    <string name="upload_picture">آپلود پروفایل</string>
    <string name="upload_picture_desc">تصویر باید زیر 1 مگابایت باشد</string>
    <string name="home">خانه</string>
    <string name="search_in">جستجو در</string>
    <string name="movie_serial">فیلم و سریال</string>
    <string name="genres">ژانرها</string>
    <string name="countrys">کشورها</string>
    <string name="networks">شبکه ها</string>
    <string name="all">بیشتر</string>
    <string name="suggested">پیشنهاد سردبیر</string>
    <string name="serial">سریال</string>
    <string name="profile">پروفایل</string>
    <string name="date_register">تاریخ عضویت</string>
    <string name="level_user">سطح کاربر</string>
    <string name="time_stream">مدت استریم</string>
    <string name="synopsis">خلاصه</string>
    <string name="description">توضیحات</string>
    <string name="tag">تگ</string>
    <string name="watching">تماشای آنلاین</string>
    <string name="introduction">معرفی</string>
    <string name="comments">نظرات</string>
    <string name="comment_">نظر</string>
    <string name="trailer">پخش تریلر</string>
    <string name="archive">آرشیو</string>
    <string name="quality_play">کیفیت پخش</string>
    <string name="sections">قسمت ها</string>
    <string name="choice_player">پخش کننده</string>
    <string name="choice_player_desc">انتخاب کنید ، برای نمایش بهتر زیر نویس ها می توانید از پخش کننده مگا استریم کنید</string>
    <string name="ages_en">AGES</string>
    <string name="_ages_en">Year Old</string>
    <string name="year_en">YEAR</string>
    <string name="_year_en">Yo</string>
    <string name="country_en">COUNTRY</string>
    <string name="_country_en"></string>
    <string name="language_en">LANGUAGE</string>
    <string name="_language_en">English</string>
    <string name="size_en">SIZE</string>
    <string name="_size_en">MB</string>
    <string name="network_en">Network</string>
    <string name="_network_en">Company</string>
    <string name="description_en">Description</string>
    <string name="awards_en">AWARDS</string>
    <string name="summary_en">Summary</string>
    <string name="summary_lorem">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. </string>
    <string name="ratings_reviews_en">Ratings &amp; Reviews</string>
    <string name="_ratings_reviews_en">out of 10</string>
    <string name="view_all_comment">مشاهده همه</string>
    <string name="add_commnet">ثبت نظر</string>
    <string name="trailer_en">Trailer</string>
    <string name="_trailer_en">Play demo</string>
    <string name="copyright">Copyright</string>
    <string name="copyright_caption">We are residents of Iran and we cannot buy your products</string>
    <string name="comment_empty">نظری یافت نشد!</string>
    <string name="comment_hint">نظر خود را وارد کنید</string>
    <string name="comment_empty_dec">اولین نفری باشید که نظر میده!</string>
    <string name="player">Player</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="search_hint">جستجو کنید...</string>
    <string name="error_connection">خطا در اتصال به شبکه</string>
    <string name="error_connection_vpn">اتصال به اینترنت خود را بررسی کنید یا از خاموش بودن فیلترشکن خود مطمئن شوید</string>
    <string name="error_connection_btn">تلاش مجدد</string>
    <string name="category">دسته بندی</string>
    <string name="secrutiy_safe">اطلاعات حساب</string>
    <string name="support">پشتیبانی</string>
    <string name="download_manager">مدیریت دانلودها</string>
    <string name="transaction">تراکنش ها</string>
    <string name="roll">قوانین و مقررات</string>
    <string name="Identification">کد معرف</string>
    <string name="logou_in_account">خروج از حساب</string>
    <string name="login_plz_title">حساب کاربری</string>
    <string name="login_plz_desc">برای استفاده از تمام امکانات وارد حساب خود شوید</string>
    <string name="comment">نظرات</string>
    <string name="replay">Replay</string>
    <string name="favorites">علاقه مندی ها</string>
    <string name="favorites_empty">لیست آرشیو خالی است!</string>
    <string name="replay_to">Replay to</string>
    <string name="msg_login_success">ورود با موفقیت انجام شد</string>
    <string name="msg_success_success">ثبت نام با موفقیت انجام شد</string>
    <string name="msg_server_error">خطای سمت سرور</string>
    <string name="msg_server_error_support">خطای سمت سرور، با پشتیبانی تماس بگیرید</string>
    <string name="msg_server_error_try">خطای سمت سرور، دوباره تلاش کنید</string>
    <string name="msg_lengt_min_username">حداقل 5 کارکتر وارد کنید</string>
    <string name="msg_lengt_max_username">حداکثر 15 کارکتر وارد کنید</string>
    <string name="msg_config_password">عدم تشابه تکرار رمز عبور</string>
    <string name="msg_try">تلاش مجدد</string>
    <string name="donate">دونیت حمایتی</string>
    <string name="donate_title">کمک مالی</string>
    <string name="payment">تایید و پرداخت</string>
    <string name="price_del">مبلغ دلخواه</string>
    <string name="login_signup">ثبت نام یا ورود</string>
    <string name="skip">الان نه</string>
    <string name="filter_title">فیلتر پیشرفته</string>
    <string name="filter_type">نوع</string>
    <string name="filter_genre">ژانر</string>
    <string name="filter_country">کشور</string>
    <string name="filter_network">شبکه</string>
    <string name="filter_year">سال ساخت</string>
    <string name="filter_age">محدوده سنی</string>
    <string name="filter_Langueg">زبان</string>
    <string name="filter_imdb">امتیاز</string>
    <string name="filter_submit">اعمال فیلتر</string>
    <string name="defult">پیشفرض</string>
    <string name="report_title">ارتباط با پشتیبانی</string>
    <string name="report_desc">درصورت وجود مشکل در ارائه سرویس و یا پیشنهادات و ... لطفا آن را با تیم پشتیبانی درمیان بگذارید</string>
    <string name="report_ed_title">عنوان</string>
    <string name="report_ed_type">نوع مشکل</string>
    <string name="report_ed_desc">توضیح</string>
    <string name="report_btn">ارسال</string>
    <string name="info">اطلاعات کاربری</string>
    <string name="info_username">نام کاربری</string>
    <string name="info_nick">اسم مستعار</string>
    <string name="info_email">ایمیل</string>
    <string name="info_phone">شمازه موبایل</string>
    <string name="info_password">رمزعبور</string>
    <string name="info_edit">ویرایش</string>
    <string name="info_old_password">رمزعبور قدیمی</string>
    <string name="info_new_password">رمزعبور جدید</string>
    <string name="info_try_password">تایید رمزعبور</string>
    <string name="support_caption">در هر لحظه کنارتان هستیم</string>
    <string name="support_tel">تماس</string>
    <string name="support_email">ایمیل</string>
    <string name="support_telegram">تلگرام</string>
    <string name="support_report">تیکت گزارش</string>
    <string name="report">گزارش</string>
    <string name="explore">کاوش</string>
    <string name="explore_en">Explore</string>
    <string name="settings">تنظیمات</string>
    <string name="settings_main">برنامه</string>
    <string name="settings_account">کاربری</string>
    <string name="settings_password">امنیت و رمزعبور</string>
    <string name="settings_notification">اعلان ها و خبرنامه</string>
    <string name="settings_check_update">بررسی بروز رسانی</string>
    <string name="payment_sheet_details_title">اطلاعات فاکتور</string>
    <string name="payment_sheet_details_desc">درصورت بروز مشکل با پشتیبانی در میان بگذارید</string>
    <string name="payment_title">پرداخت سفارش</string>
    <string name="payment_how_pay">پرداخت سفارش</string>
    <string name="payment_payment_getway">درگاه پرداخت</string>
    <string name="payment_card_by_card">کارت به کارت</string>
    <string name="payment_discount_code">کد تخفیف</string>
    <string name="payment_discount_code_submit">اعمال</string>
    <string name="payment_discount_code_delect">حذف</string>
    <string name="payment_discount_code_hint">کد را وارد کنید</string>
    <string name="submit">تایید</string>
    <string name="payment_topic">عنوان</string>
    <string name="payment_topic_payment">عنوان پرداخت</string>
    <string name="payment_desc">توصیحات</string>
    <string name="payment_net_price">قیمت خالص</string>
    <string name="payment_discount">تخفیف</string>
    <string name="payment_tax">مالیات</string>
    <string name="payment_payable">قابل پرداخت</string>
    <string name="subscription">اشتراک ویژه</string>
    <string name="subscription_title_en">Become a special member of Mega Stream</string>
    <string name="subscription_title">عضو ویژه مگا استریم شوید</string>
    <string name="subscription_caption">فعال سازی اشتراک ویژه مگا استریم</string>
    <string name="subscription_caption02">50 درصد درآمد مگااستریم جهت امور خیریه و کمک رسانی به افراد نیازمند می باشد.</string>
    <string name="subscription_possibilities">امکانات اشتراک ویژه</string>
    <string name="subscription_submit">فعال سازی</string>
    <string name="subscription_toman">تومان</string>
    <string name="subscription_option_title">امکانات اشتراک ویژه:</string>
    <string name="subscription_list_title">تعرفه های اشتراک:</string>
    <string name="subscription_option_01">دسترسی به محتوای ویژه</string>
    <string name="subscription_option_02">امکان دانلود محتوای مگا استریم به صورت نامحدود</string>
    <string name="subscription_option_03">اینترنت نیم بها</string>
    <string name="subscription_option_04">انتشار فیلم و سریال درخواستی</string>
    <string name="reset_password">فراموشی رمزعبور</string>
    <string name="reset_password_desc">جهت ارسال کد تایید فرم زیر پر کنید</string>
    <string name="reset_password_hint">نام کاربری یا ایمیل</string>
    <string name="reset_password_submit">ارسال کد</string>
</resources>