<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/theme_background"
    tools:context=".ui.LoginFragment"
    android:padding="@dimen/size_padding_container">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mega"
            android:textSize="@dimen/size_txt_60"
            android:fontFamily="@font/font_bold_en"
            android:textColor="@color/theme_main"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/account_en"
            android:textSize="@dimen/size_txt_60"
            android:fontFamily="@font/font_regular_en"
            android:textColor="@color/theme_white_txt"/>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <!--Form Login-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_padding_30"
                android:text="@string/login_to_account"
                android:textColor="@color/theme_white_txt"
                android:fontFamily="@font/font_bold_en"
                android:textSize="@dimen/size_txt_50"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Username-->
                <EditText
                    style="@style/Theme.Original.EditText.Icon"
                    android:drawableEnd="@drawable/ic_username"
                    android:hint="@string/username" />
                <!--Password-->
                <EditText
                    style="@style/Theme.Original.EditText.Icon"
                    android:drawableEnd="@drawable/ic_password"
                    android:hint="@string/password" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    style="@style/Theme.Original.Button"
                    android:text="@string/username" />

            </LinearLayout>
        </LinearLayout>

        <!--Form Signup-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_padding_30"
                android:text="@string/signup"
                android:textColor="@color/theme_white_txt"
                android:fontFamily="@font/font_bold_en"
                android:textSize="@dimen/size_txt_50"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Username-->
                <EditText
                    style="@style/Theme.Original.EditText.Icon"
                    android:drawableEnd="@drawable/ic_username"
                    android:inputType="text"
                    android:hint="@string/username" />
                <!--Username-->
                <EditText
                    style="@style/Theme.Original.EditText.Icon"
                    android:drawableEnd="@drawable/ic_username"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email" />
                <!--Password-->
                <EditText
                    style="@style/Theme.Original.EditText.Icon"
                    android:drawableEnd="@drawable/ic_password"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
                <!--ConfigPassword-->
                <EditText
                    style="@style/Theme.Original.EditText.Icon"
                    android:drawableEnd="@drawable/ic_password"
                    android:hint="@string/password_config" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignup"
                    style="@style/Theme.Original.Button"
                    android:text="@string/username" />

            </LinearLayout>
        </LinearLayout>

        <!--Or Line-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/size_padding_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_line_height"
                android:layout_weight="1"
                android:background="@color/theme_background_edittext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_padding_10"
                android:text="@string/or_en"
                android:fontFamily="@font/font_bold_en"
                android:textSize="@dimen/size_txt_20"
                android:textColor="@color/theme_gray_txt"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_line_height"
                android:layout_weight="1"
                android:background="@color/theme_background_edittext"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/Theme.Original.Button"
                android:layout_weight="1"
                android:backgroundTint="@color/theme_white_fit"
                app:icon="@drawable/ic_google"
                app:iconGravity="textEnd"
                app:iconTint="@null"
                android:text="@string/google_account"
                android:textColor="@color/theme_black_txt" />

            <Space
                android:layout_width="@dimen/size_padding_20"
                android:layout_height="0dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Theme.Original.Button"
                android:layout_weight="1"
                android:backgroundTint="@color/theme_twitter"
                app:icon="@drawable/ic_twitter"
                app:iconGravity="textEnd"
                app:iconSize="15dp"
                android:text="@string/twitter_account"
                android:textColor="@color/theme_white_fit" />

        </LinearLayout>

        <!--Roll-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>