<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordFragment"
    android:background="@color/theme_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Theme.Original.Toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_toolbar_height"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/Theme.Original.Toolbar.Button.Back"
                    android:id="@+id/btnBack"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/reset_password"
                    android:textSize="@dimen/size_txt_30"
                    android:fontFamily="@font/font_bold_fa"
                    android:textColor="@color/theme_white_txt"
                    android:textAlignment="viewStart"/>

            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar"
        android:orientation="vertical"
        android:padding="@dimen/size_padding_container">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_desc"
            android:fontFamily="@font/font_regular_fa"
            android:textColor="@color/theme_gray_txt"
            android:textSize="@dimen/size_txt_20"/>

        <!--Username-->
        <EditText
            android:id="@+id/edLoginUsername"
            android:layout_marginTop="@dimen/size_padding_20"
            style="@style/Theme.Original.EditText.Icon"
            android:hint="@string/reset_password_hint" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        style="@style/Theme.Original.Button"
        android:layout_margin="@dimen/size_padding_container"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/size_padding_30"
        android:text="@string/reset_password_submit" />

</RelativeLayout>